// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Month renders correctly when with props 1`] = `
.emotion-3 {
  padding-top: 2px;
  text-align: center;
  background: #fafafa;
  pointer-events: auto;
}

.emotion-3:last-child {
  padding-bottom: 40px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.375rem;
  height: 58px;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    height: 78px;
  }
}

.emotion-0 {
  font-weight: 700;
  margin-right: 5px;
}

.emotion-2 {
  top: 0;
}

<div
  className="emotion-3"
  role="rowgroup"
  style={
    Object {
      "bottom": 0,
    }
  }
>
  <div
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      Apr
    </span>
    <span>
      2019
    </span>
  </div>
  <div
    className="emotion-2"
  >
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-14T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={true}
      key="1555250400000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1555250400000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-15T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1555336800000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1555336800000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-16T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1555423200000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1555423200000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-17T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1555509600000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1555509600000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-18T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1555596000000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1555596000000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-19T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1555682400000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1555682400000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-20T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1555768800000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1555768800000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-21T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1555855200000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1555855200000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-22T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1555941600000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1555941600000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-23T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1556028000000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1556028000000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-24T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={true}
      isToday={false}
      key="1556114400000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1556114400000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-25T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={true}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1556200800000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1556200800000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-26T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={true}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1556287200000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1556287200000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-27T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={true}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1556373600000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1556373600000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-28T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={true}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1556460000000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1556460000000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-29T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1556546400000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1556546400000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-04-30T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1556632800000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1556632800000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-05-01T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1556719200000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1556719200000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-05-02T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1556805600000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1556805600000}
      year={2019}
    />
    <Day
      Icon={[Function]}
      currencyCode=""
      currencySymbol=""
      date={2019-05-03T14:00:00.000Z}
      endAriaLabel="this is the end"
      endDate={2019-04-28T14:00:00.000Z}
      endLabel="end"
      endSelectedLabel="end selected"
      focusDateElement={[Function]}
      isDateRange={false}
      isDesktopDevice={true}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={false}
      isStart={false}
      isToday={false}
      key="1556892000000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel="this is the start"
      startDate={2019-04-24T14:00:00.000Z}
      startLabel="start"
      startSelectedLabel="start selected"
      timestamp={1556892000000}
      year={2019}
    />
  </div>
</div>
`;

exports[`Month renders correctly with defaults 1`] = `
.emotion-3 {
  padding-top: 2px;
  text-align: center;
  background: #fafafa;
  pointer-events: auto;
}

.emotion-3:last-child {
  padding-bottom: 40px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.375rem;
  height: 58px;
}

@media only screen and (min-width:768px) {
  .emotion-1 {
    height: 78px;
  }
}

.emotion-0 {
  font-weight: 700;
  margin-right: 5px;
}

<div
  className="emotion-3"
  role="rowgroup"
  style={Object {}}
>
  <div
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      Apr
    </span>
    <span>
      2019
    </span>
  </div>
  <div
    className="emotion-2"
  >
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-14T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={true}
      key="1555250400000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1555250400000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-15T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1555336800000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1555336800000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-16T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1555423200000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1555423200000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-17T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1555509600000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1555509600000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-18T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1555596000000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1555596000000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-19T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1555682400000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1555682400000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-20T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1555768800000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1555768800000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-21T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1555855200000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1555855200000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-22T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1555941600000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1555941600000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-23T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1556028000000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1556028000000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-24T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1556114400000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1556114400000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-25T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1556200800000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1556200800000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-26T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1556287200000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1556287200000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-27T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1556373600000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1556373600000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-28T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1556460000000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1556460000000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-29T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={true}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={false}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1556546400000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1556546400000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-04-30T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1556632800000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1556632800000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-05-01T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1556719200000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1556719200000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-05-02T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1556805600000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1556805600000}
      year={2019}
    />
    <Day
      Icon={null}
      currencyCode=""
      currencySymbol=""
      date={2019-05-03T14:00:00.000Z}
      endAriaLabel=""
      endDate={null}
      endLabel=""
      endSelectedLabel=""
      focusDateElement={[Function]}
      isDateRange={true}
      isDesktopDevice={false}
      isDisabled={false}
      isEnd={false}
      isFirstDayOfMonth={false}
      isFirstMonth={true}
      isInRange={false}
      isLastMonth={false}
      isLoadingPrice={false}
      isOutside={true}
      isSelectingStartDate={true}
      isStart={false}
      isToday={false}
      key="1556892000000"
      month="Apr"
      onDayClick={[Function]}
      price={null}
      startAriaLabel=""
      startDate={null}
      startLabel=""
      startSelectedLabel=""
      timestamp={1556892000000}
      year={2019}
    />
  </div>
</div>
`;
